# template-rust

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  flake.nix  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
docs/: CI-CD.md  QUICK-START.md  README.md
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/database/: mod.rs
src/models/: mod.rs
src/tui/: mod.rs
tests/: integration_tests.rs
